# rh-advertising-v2

./: .dockerignore  .env.example  .gitignore  CREATIVITY_TEST_REPORT.md  CTA_DROPDOWN_TEST_REPORT.md  DATA_DIRECTORY_ANALYSIS.md  DEPLOYMENT.md  DOCKER.md  Dockerfile  QUICKSTART-DEPLOY.md  RAILWAY_DEPLOYMENT.md  README.md  VERCEL_DEPLOYMENT.md  debug_responses.json  deploy-complete.sh  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf.example  nixpacks.toml  nixpacks.toml.backup  package-lock.json  railway.toml  simple-deploy.sh  vercel.json
api/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  vercel.json
api/app/: __init__.py  config_loader.py  deps.py  main.py
api/app/models/: __init__.py  domain.py  io.py
api/app/routes/: analyze_usps.py  config.py  debug.py  generate.py  health.py  limits.py  optimize.py  shorten.py  specs.py
api/app/services/: analyse.py  limits.py  llm.py  scrape.py  shorten.py
data/: EXAMPLES.md  ad_limits.yaml  asset_specs.yaml  taxonomies.yaml
data/schemas/: google_search.json  social.json
web/: .dockerignore  .env.example  .env.production  .gitignore  Dockerfile  README.md  docker-compose.yml  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vercel.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/assets/: actions.ts  page.tsx
web/app/auth/: page.tsx
web/app/copy/: actions.ts  page.tsx
web/app/insights/: actions.ts  page.tsx
web/app/optimise/: actions.ts  (+1 more)
web/lib/: clipboard.ts  config.ts  limits.ts
(+35 files in other folders)
